# resume_tuner

./: .gitignore  aggregates.txt  boilderPlate.yaml  index.html  index.tsx  main.py  notes.ru  notesPolished.ru  oldResume.yaml  package-lock.json  package.json  pyproject.toml  tempProj.yaml  tsconfig.json
backend/: __init__.py  assProj.py  callGPT.py  config.py  optimize.py  prompt.txt  render.py
backend/aiEndpoints/: prompt.txt
backend/render/: render.py
backend/resumeProcessing/: assProj.py
componets/: Content.tsx
electronApp/: index.tsx  package-lock.json  package.json  renderer.tsx
electronApp/componets/: Header.tsx
input/: aggregates.txt  aggregatesIgnore.txt  boilderPlate.yaml  jobDesc.txt  tempProj.yaml
input/tests/: harmonizer.txt  northwestern_cv_developer.txt  resume_tuner.txt
input/tighterthanyourmom/: EducationEntry.j2.typ  SectionEnding.j2.typ
jobtests/: fullstack.txt  jobCatalog.txt
myResumeShit/: computerVision.hs
output/: Ernie_Wang_CV.html  Ernie_Wang_CV.md  Ernie_Wang_CV.typ
python/: render.py  resume_CV.yaml  test.py
python/fresh_output/: Ernie_Wang_CV.typ
python/llmEndpoint/: callGPT.py  prompt.txt
python/rendercv_output/: Ernie_Wang_CV.html  Ernie_Wang_CV.md  Ernie_Wang_CV.typ
python/resumeAssembler/: assProj.py  formatProj.py  optimize.py
python/tighterthanyourmom/: PublicationEntry.j2.typ
renderPy/: test.py
rendercv_output/: Ernie_Wang_CV.html  Ernie_Wang_CV.md  Ernie_Wang_CV.typ
src/: App.tsx  index.css
tests/: g2i_ai_training.txt  musecatalog.txt  self_employed_musician.txt
(+15 files in other folders)
